Updates talks area with a header and fixes an issue with overflowing on mobile

--- a/src/assets/scss/components/_presentation.scss
+++ b/src/assets/scss/components/_presentation.scss
@@ -14,4 +14,10 @@
   p {
     margin: 0;
   }
+
+  @include breakpoint(small) {
+    img, iframe {
+      max-width: 100%;
+    }
+  }
 }
